@@ -1,3 +1,8 @@
+2013-01-03  Jason Merrill  <jason@redhat.com>
+
+	PR c++/55856
+	* semantics.c (build_data_member_initialization): Handle DECL_EXPR.
+
 2012-12-07  Matthias Klose  <doko@ubuntu.com>
 
 	* tree.c (build_aggr_init_expr): Add parameter name, mark as unused.
